force-app/main/default/objects/NCSCOrderLineItem__c/NCSCOrderLineItem__c.object-meta.xml
<CustomObject>
    <description>This object will hold the line item details for orders that have line items including CSC orders.</description>
    <label>Discrepancy</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discrepancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>