force-app/main/default/objects/NCSCOrderLineItem__c/fields/A15_Flag__c.field-meta.xml
<CustomField>
    <fullName>A15_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_a15_flg / csc_dtl_rord_flg</description>
    <label>A15 Flag</label>
    <type>Checkbox</type>
</CustomField>