force-app/main/default/objects/NCSCOrderLineItem__c/fields/Acquisition_Code__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Code__c</fullName>
    <description>Source table: rod
Source column: rod_acq_code</description>
    <label>Acquisition Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>