force-app/main/default/objects/NCSCOrderLineItem__c/fields/Actual_Export_Domestic_Code__c.field-meta.xml
<CustomField>
    <fullName>Actual_Export_Domestic_Code__c</fullName>
    <description>Source table: rod
Source column: rod_actual_ed</description>
    <label>Actual Export/Domestic Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>