force-app/main/default/objects/NCSCOrderLineItem__c/fields/Additional_Documentation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Additional_Documentation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_add_doc_flg / csc_mst_add_doc_flg</description>
    <label>Additional Documentation Flag</label>
    <type>Checkbox</type>
</CustomField>