force-app/main/default/objects/NCSCOrderLineItem__c/fields/Adjusted_EDD_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_EDD_Prefix__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_trn_edd_prefix</description>
    <label>Adjusted EDD Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>