force-app/main/default/objects/NCSCOrderLineItem__c/fields/Adjusted_NIIN__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_NIIN__c</fullName>
    <description>Source table: csc_trn
Source column: rod_dis_nsn/ csc_trn_nin /csc_trn_part_nbr</description>
    <label>Adjusted NIIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>