force-app/main/default/objects/NCSCOrderLineItem__c/fields/Adjusted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Quantity__c</fullName>
    <description>Source table:   rod / csc_trn
Source column: &quot;    rod_adj_qty / csc_trn_qty&quot;</description>
    <label>Adjusted Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>