force-app/main/default/objects/NCSCOrderLineItem__c/fields/Adjusted_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Unit_Price__c</fullName>
    <description>Source table: rod / csc_trn
Source column:     rod_adj_unt_prc / csc_trn_unt_prc</description>
    <label>Adjusted Unit Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>