force-app/main/default/objects/NCSCOrderLineItem__c/fields/Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Value__c</fullName>
    <description>Source table:  rod / csc_trn
Source column: &quot;    rod_adj_val / csc_trn_adj_val&quot;</description>
    <label>Adjusted Value</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>