force-app/main/default/objects/NCSCOrderLineItem__c/fields/ADR_Flag__c.field-meta.xml
<CustomField>
    <fullName>ADR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_adr_flg / csc_dtl_adr_flg</description>
    <label>ADR Flag</label>
    <type>Checkbox</type>
</CustomField>