force-app/main/default/objects/NCSCOrderLineItem__c/fields/Analyst_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Response_Date__c</fullName>
    <description>Source table: rod
Source column: rod_aco_rsp_dte</description>
    <label>Analyst Response Date</label>
    <type>Date</type>
</CustomField>