force-app/main/default/objects/NCSCOrderLineItem__c/fields/Assigned_Date_to_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date_to_Analyst__c</fullName>
    <description>Source table: rod
Source column: rod_aco_con_dte</description>
    <label>Assigned Date to Analyst</label>
    <type>Date</type>
</CustomField>