force-app/main/default/objects/NCSCOrderLineItem__c/fields/Auto_Resolve_Flag__c.field-meta.xml
<CustomField>
    <fullName>Auto_Resolve_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_auto_res_flg</description>
    <label>Auto Resolve Flag</label>
    <type>Checkbox</type>
</CustomField>