force-app/main/default/objects/NCSCOrderLineItem__c/fields/B_Order__c.field-meta.xml
<CustomField>
    <fullName>B_Order__c</fullName>
    <description>Unknown</description>
    <label>B. Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>