force-app/main/default/objects/NCSCOrderLineItem__c/fields/Cancellation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_ac1_flg / csc_dtl_ac1_flg</description>
    <label>Cancellation Flag</label>
    <type>Checkbox</type>
</CustomField>