force-app/main/default/objects/NCSCOrderLineItem__c/fields/Carrier_Claim_Flag__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Claim_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_car_clm_flg / csc_dtl_car_clm_flg</description>
    <label>Carrier Claim Flag</label>
    <type>Checkbox</type>
</CustomField>