force-app/main/default/objects/NCSCOrderLineItem__c/fields/Carrier_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Claim_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_car_clm_nbr /csc_dtl_car_clm_nbr</description>
    <label>Carrier Claim Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>