force-app/main/default/objects/NCSCOrderLineItem__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <description>Source table: rod
Source column: rod_carrier_name</description>
    <label>Carrier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>