force-app/main/default/objects/NCSCOrderLineItem__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NCSC - Lookup to the parent order case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>