force-app/main/default/objects/NCSCOrderLineItem__c/fields/Credit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Credit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_crd_flg / csc_dtl_cr_mis_flg</description>
    <label>Credit   Flag</label>
    <type>Checkbox</type>
</CustomField>