force-app/main/default/objects/NCSCOrderLineItem__c/fields/Credit_Memo_Flag__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_credit_memo_flg / csc_dtl_credit_memo_flg</description>
    <label>Credit Memo Flag</label>
    <type>Checkbox</type>
</CustomField>