force-app/main/default/objects/NCSCOrderLineItem__c/fields/Debit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Debit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_dbt_flg / csc_dtl_ret_ovg_flg</description>
    <label>Debit  Flag</label>
    <type>Checkbox</type>
</CustomField>