force-app/main/default/objects/NCSCOrderLineItem__c/fields/Decision_Description__c.field-meta.xml
<CustomField>
    <fullName>Decision_Description__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_dec_oth / csc_dtl_oth_dsc</description>
    <label>Decision Description</label>
    <type>TextArea</type>
</CustomField>