force-app/main/default/objects/NCSCOrderLineItem__c/fields/Delivery_SCAC__c.field-meta.xml
<CustomField>
    <fullName>Delivery_SCAC__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_del_scac /csc_dtl_del_scac</description>
    <label>Delivery SCAC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>