force-app/main/default/objects/NCSCOrderLineItem__c/fields/DiscrepacnyOrder__c.field-meta.xml
<CustomField>
    <fullName>DiscrepacnyOrder__c</fullName>
    <description>This is the parent order that the line item is related to</description>
    <label>Discrepancy Order</label>
    <referenceTo>NCSCOrder__c</referenceTo>
    <relationshipLabel>Discrepancies</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>