force-app/main/default/objects/NCSCOrderLineItem__c/fields/Discrepant_NIIN__c.field-meta.xml
<CustomField>
    <fullName>Discrepant_NIIN__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_dis_nsn / ( csc_dtl_dis_nin /csc_dtl_dis_part_nbr)</description>
    <label>Discrepant NIIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>