force-app/main/default/objects/NCSCOrderLineItem__c/fields/Discrepant_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Discrepant_Prefix__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_dis_edd_prefix</description>
    <label>Discrepant Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>