force-app/main/default/objects/NCSCOrderLineItem__c/fields/Discrepant_quantity__c.field-meta.xml
<CustomField>
    <fullName>Discrepant_quantity__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_dis_qty / csc_dtl_dis_qty</description>
    <label>Discrepant quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>