force-app/main/default/objects/NCSCOrderLineItem__c/fields/Dispose_Flag__c.field-meta.xml
<CustomField>
    <fullName>Dispose_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_dispose_flg / csc_dtl_dispose_flg</description>
    <label>Dispose Flag</label>
    <type>Checkbox</type>
</CustomField>