force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Part_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>EDD_Part_Number_Prefix__c</fullName>
    <description>Source table:rod / csc_dtl 
Source column: csc_dtl_ord_edd_prefix</description>
    <label>EDD Part Number Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>