force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Prefix_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>EDD_Prefix_Part_Number__c</fullName>
    <description>EDD order prefix or part number</description>
    <label>EDD Prefix/Part Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>