force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Req_Number__c.field-meta.xml
<CustomField>
    <fullName>EDD_Req_Number__c</fullName>
    <description>EDD requisition Number</description>
    <label>EDD Req Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>