force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Req_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>EDD_Req_Number_Suffix__c</fullName>
    <label>EDD Req Number Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>