force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>EDD_Requisition_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_edd_req_nbr</description>
    <label>EDD Requisition Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>