force-app/main/default/objects/NCSCOrderLineItem__c/fields/EDD_Requisition_Suffix__c.field-meta.xml
<CustomField>
    <fullName>EDD_Requisition_Suffix__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_edd_req_sfx</description>
    <label>EDD Requisition Suffix</label>
    <length>1</length>
    <type>Text</type>
</CustomField>