force-app/main/default/objects/NCSCOrderLineItem__c/fields/Email_Flag__c.field-meta.xml
<CustomField>
    <fullName>Email_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_email_flg</description>
    <label>Email Flag</label>
    <type>Checkbox</type>
</CustomField>