force-app/main/default/objects/NCSCOrderLineItem__c/fields/Expedite_Shipment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Expedite_Shipment_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_exp_ship_flg / csc_dtl_exp_ship_flg</description>
    <label>Expedite Shipment Flag</label>
    <type>Checkbox</type>
</CustomField>