force-app/main/default/objects/NCSCOrderLineItem__c/fields/Freight_Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Freight_Bill_Number__c</fullName>
    <description>Source table: rod
Source column: rod_freight_bill</description>
    <label>Freight Bill Number</label>
    <type>TextArea</type>
</CustomField>