force-app/main/default/objects/NCSCOrderLineItem__c/fields/GBL__c.field-meta.xml
<CustomField>
    <fullName>GBL__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_gbl_nbr / csc_dtl_gbl_nbr</description>
    <label>GBL</label>
    <length>11</length>
    <type>Text</type>
</CustomField>