force-app/main/default/objects/NCSCOrderLineItem__c/fields/GSA_Order_Item_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>GSA_Order_Item_Unit_Cost__c</fullName>
    <description>Source table: rod
Source column: rod_cost_prc</description>
    <label>GSA Order Item Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>