force-app/main/default/objects/NCSCOrderLineItem__c/fields/hg__c.field-meta.xml
<CustomField>
    <fullName>hg__c</fullName>
    <description>jkj</description>
    <label>hg</label>
    <length>12</length>
    <type>Text</type>
</CustomField>