force-app/main/default/objects/NCSCOrderLineItem__c/fields/Item_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Item_Number_Prefix__c</fullName>
    <label>Item Number Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>