force-app/main/default/objects/NCSCOrderLineItem__c/fields/Item_Number_Standard__c.field-meta.xml
<CustomField>
    <fullName>Item_Number_Standard__c</fullName>
    <label>Item Number Standard</label>
    <length>20</length>
    <type>Text</type>
</CustomField>