force-app/main/default/objects/NCSCOrderLineItem__c/fields/Legacy_case_dtl_Key__c.field-meta.xml
<CustomField>
    <fullName>Legacy_case_dtl_Key__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_key</description>
    <label>Legacy case dtl Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>