force-app/main/default/objects/NCSCOrderLineItem__c/fields/Legacy_Case_Key__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case_Key__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_key / csc_mst_key</description>
    <label>Legacy Case Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>