force-app/main/default/objects/NCSCOrderLineItem__c/fields/Manifest_Number__c.field-meta.xml
<CustomField>
    <fullName>Manifest_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_man_nbr / csc_dtl_man_nbr</description>
    <label>Manifest Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>