force-app/main/default/objects/NCSCOrderLineItem__c/fields/MRA_Flag__c.field-meta.xml
<CustomField>
    <fullName>MRA_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_mra_flg / csc_dtl_ret_cr_flg</description>
    <label>MRA Flag</label>
    <type>Checkbox</type>
</CustomField>