force-app/main/default/objects/NCSCOrderLineItem__c/fields/NCSC_Expedite_Flag__c.field-meta.xml
<CustomField>
    <fullName>NCSC_Expedite_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod
Source column: rod_exped_flg</description>
    <label>NCSC Expedite Flag</label>
    <type>Checkbox</type>
</CustomField>