force-app/main/default/objects/NCSCOrderLineItem__c/fields/NIIN__c.field-meta.xml
<CustomField>
    <fullName>NIIN__c</fullName>
    <description>National Item Identification Number</description>
    <label>NIIN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>