force-app/main/default/objects/NCSCOrderLineItem__c/fields/NIIN_resolved_flag__c.field-meta.xml
<CustomField>
    <fullName>NIIN_resolved_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_res_flg</description>
    <label>NIIN resolved flag</label>
    <type>Checkbox</type>
</CustomField>