force-app/main/default/objects/NCSCOrderLineItem__c/fields/No_Action_Flag__c.field-meta.xml
<CustomField>
    <fullName>No_Action_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_no_action_flg / csc_dtl_no_action_flg</description>
    <label>No Action Flag</label>
    <type>Checkbox</type>
</CustomField>