force-app/main/default/objects/NCSCOrderLineItem__c/fields/Oder_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Oder_Ship_Date__c</fullName>
    <description>Source table: rod
Source column: rod_shp_dte</description>
    <label>Oder Ship Date</label>
    <type>Date</type>
</CustomField>