force-app/main/default/objects/NCSCOrderLineItem__c/fields/Order_NIIN_NSN__c.field-meta.xml
<CustomField>
    <fullName>Order_NIIN_NSN__c</fullName>
    <description>Source table: rod / csc_dtl 
Source column: rod_ord_nsn / csc_dtl_ord_nin /csc_dtl_ord_part_nbr</description>
    <label>Order NIIN/NSN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>