force-app/main/default/objects/NCSCOrderLineItem__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_ord_qty / csc_dtl_ord_qty</description>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>