force-app/main/default/objects/NCSCOrderLineItem__c/fields/Order_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Unit_Price__c</fullName>
    <description>Source table: rod / csc_trn
Source column: &quot;rod_ord_unt_prc / csc_trn_unt_prc&quot;</description>
    <label>Order Unit Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>