force-app/main/default/objects/NCSCOrderLineItem__c/fields/Other_Decision_flag__c.field-meta.xml
<CustomField>
    <fullName>Other_Decision_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_oth_flg / csc_dtl_oth_flg</description>
    <label>Other Decision flag</label>
    <type>Checkbox</type>
</CustomField>