force-app/main/default/objects/NCSCOrderLineItem__c/fields/Pickup_SCAC__c.field-meta.xml
<CustomField>
    <fullName>Pickup_SCAC__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_pkp_scac / csc_dtl_pkp_scac</description>
    <label>Pickup SCAC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>