force-app/main/default/objects/NCSCOrderLineItem__c/fields/Pickup_SCAC_name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_SCAC_name__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_pkp_scac_nam / csc_dtl_pkp_scac_nam</description>
    <label>Pickup SCAC name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>