force-app/main/default/objects/NCSCOrderLineItem__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_po_nbr / csc_dtl_po_nbr</description>
    <label>PO Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>