force-app/main/default/objects/NCSCOrderLineItem__c/fields/POD_Flag__c.field-meta.xml
<CustomField>
    <fullName>POD_Flag__c</fullName>
    <description>Source table: rod / csc_dtl
Source column:     rod_prf_flg / csc_dtl_trc_flg</description>
    <label>POD Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>