force-app/main/default/objects/NCSCOrderLineItem__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <description>Source table: rod / csc_dtl
Source column:     rod_prb_oth / csc_dtl_oth_prb_dsc</description>
    <label>Problem Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>