force-app/main/default/objects/NCSCOrderLineItem__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <description>Source table: rod / csc_dtl
Source column:     rod_prb_typ / csc_dtl_prb_typ</description>
    <label>Problem Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>