force-app/main/default/objects/NCSCOrderLineItem__c/fields/QC_Net_Number__c.field-meta.xml
<CustomField>
    <fullName>QC_Net_Number__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_qc_net_nbr</description>
    <label>QC Net Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>