force-app/main/default/objects/NCSCOrderLineItem__c/fields/Quality_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Type__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_quality_typ /csc_dtl_quality_typ</description>
    <label>Quality Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>