force-app/main/default/objects/NCSCOrderLineItem__c/fields/Quality_zone_Flag__c.field-meta.xml
<CustomField>
    <fullName>Quality_zone_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_qlty_zone_flg / csc_dtl_qlty_zone_flg</description>
    <label>Quality zone Flag</label>
    <type>Checkbox</type>
</CustomField>