force-app/main/default/objects/NCSCOrderLineItem__c/fields/Redeliver_Flag__c.field-meta.xml
<CustomField>
    <fullName>Redeliver_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_rdliver_flg / csc_dtl_rdliver_flg</description>
    <label>Redeliver Flag</label>
    <type>Checkbox</type>
</CustomField>