force-app/main/default/objects/NCSCOrderLineItem__c/fields/Req_num_PO_num__c.field-meta.xml
<CustomField>
    <fullName>Req_num_PO_num__c</fullName>
    <label>Req #/PO #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>