force-app/main/default/objects/NCSCOrderLineItem__c/fields/Reship_Flag__c.field-meta.xml
<CustomField>
    <fullName>Reship_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_re_shp_flg</description>
    <label>Reship  Flag</label>
    <type>Checkbox</type>
</CustomField>