force-app/main/default/objects/NCSCOrderLineItem__c/fields/Reshipped_EDD_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Reshipped_EDD_Prefix__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_rshp_edd_prefix</description>
    <label>Reshipped EDD Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>