force-app/main/default/objects/NCSCOrderLineItem__c/fields/Reshipped_NIIN__c.field-meta.xml
<CustomField>
    <fullName>Reshipped_NIIN__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_a15_nsn / (csc_dtl_rshp_nin / csc_dtl_rshp_part_nbr)</description>
    <label>Reshipped NIIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>