force-app/main/default/objects/NCSCOrderLineItem__c/fields/Reshipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reshipped_Quantity__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_a15_qty / csc_dtl_rshp_qty</description>
    <label>Reshipped Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>