force-app/main/default/objects/NCSCOrderLineItem__c/fields/Retain_N_C_Flag__c.field-meta.xml
<CustomField>
    <fullName>Retain_N_C_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_retain_nc_flg / csc_dtl_retain_nc_flg</description>
    <label>Retain N/C  Flag</label>
    <type>Checkbox</type>
</CustomField>