force-app/main/default/objects/NCSCOrderLineItem__c/fields/Returned_EDD_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Returned_EDD_Prefix__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: csc_dtl_ret_edd_prefix</description>
    <label>Returned EDD Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>