force-app/main/default/objects/NCSCOrderLineItem__c/fields/Returned_NIIN__c.field-meta.xml
<CustomField>
    <fullName>Returned_NIIN__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_zau_nsn / (csc_dtl_ret_nin /csc_dtl_ret_part_nbr)</description>
    <label>Returned NIIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>