force-app/main/default/objects/NCSCOrderLineItem__c/fields/Returned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Returned_Quantity__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_zau_qty / csc_dtl_ret_qty</description>
    <label>Returned Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>