force-app/main/default/objects/NCSCOrderLineItem__c/fields/Returned_Value__c.field-meta.xml
<CustomField>
    <fullName>Returned_Value__c</fullName>
    <description>Source table: rod / csc_dtl
Source column: rod_zau_adj_val / csc_dtl_ret_val</description>
    <label>Returned Value</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>