force-app/main/default/objects/NCSCOrderLineItem__c/fields/Session_number__c.field-meta.xml
<CustomField>
    <fullName>Session_number__c</fullName>
    <label>Session #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>