force-app/main/default/objects/NCSCOrderLineItem__c/fields/Store_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Location_Code__c</fullName>
    <label>Store Location Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>