force-app/main/default/objects/NCSCOrderLineItem__c/fields/Store_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Store_Location_Description__c</fullName>
    <label>Store Location Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>