force-app/main/default/objects/NCSCOrderLineItem__c/fields/Store_number__c.field-meta.xml
<CustomField>
    <fullName>Store_number__c</fullName>
    <description>This is the Store code.</description>
    <label>Store Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>