force-app/main/default/objects/NCSCOrderLineItem__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <description>EDD Requisition Number Suffix</description>
    <label>Suffix</label>
    <length>5</length>
    <type>Text</type>
</CustomField>