force-app/main/default/objects/NCSCOrderLineItem__c/fields/Surcharge_Code__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Code__c</fullName>
    <description>Source table: rod
Source column: rod_sur_chrg_cde</description>
    <label>Surcharge Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>