force-app/main/default/objects/NCSCOrderLineItem__c/fields/TD_Code__c.field-meta.xml
<CustomField>
    <fullName>TD_Code__c</fullName>
    <label>TD Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00	CTC</fullName>
            </value>
            <value>
                <fullName>01	CANCELED, OUT OF STOCK</fullName>
            </value>
            <value>
                <fullName>02	TELEPHONE RFS&#39;S</fullName>
            </value>
            <value>
                <fullName>03	STOCK DIRECT DELIVERY</fullName>
            </value>
            <value>
                <fullName>04	REFERRAL</fullName>
            </value>
            <value>
                <fullName>06	CANCELED, DISCONTINUED ITEM</fullName>
            </value>
            <value>
                <fullName>07	NON-STOCK, DIRECT DELIVERY</fullName>
            </value>
            <value>
                <fullName>09	CANCELLATION</fullName>
            </value>
            <value>
                <fullName>10	STOCK ISSUE</fullName>
            </value>
            <value>
                <fullName>11	STOCK ISSUE SUBSTITUTE</fullName>
            </value>
            <value>
                <fullName>15	SUPPLEMENTAL</fullName>
            </value>
            <value>
                <fullName>20	BACK ORDER NORMAL</fullName>
            </value>
            <value>
                <fullName>21	BACK ORDER SUBSTITUTE ITEM</fullName>
            </value>
            <value>
                <fullName>22	BACK ORDER WAREHOUSE REFUSAL</fullName>
            </value>
            <value>
                <fullName>23	FUTURE DELIVERY, CREATION</fullName>
            </value>
            <value>
                <fullName>24	BACK ORDER ADMINISTRATIVE</fullName>
            </value>
            <value>
                <fullName>26	RECREATION OF PARTIAL BACK ORDER QUANTITY</fullName>
            </value>
            <value>
                <fullName>30	STOCK BACKORDER RELEASE</fullName>
            </value>
            <value>
                <fullName>31	STOCK BACKORDER RELEASE SUBSTITUTE</fullName>
            </value>
            <value>
                <fullName>33	FUTURE RELEASE NORMAL</fullName>
            </value>
            <value>
                <fullName>40	STOCK REPLENDISHMENT</fullName>
            </value>
            <value>
                <fullName>41	STOCK REPLENDISHMENT SUBSTITUTE</fullName>
            </value>
            <value>
                <fullName>48	DI CREATION, OTHER GOV&#39;T. (FPI,BMP,GPO,CP)</fullName>
            </value>
            <value>
                <fullName>80	REPOSITION STOCK REQUEST (WITHIN REGION)</fullName>
            </value>
            <value>
                <fullName>81	ITW (INTER-WAREHOUSE TRANSFER)</fullName>
            </value>
            <value>
                <fullName>82	CSC DISCREPANCIES</fullName>
            </value>
            <value>
                <fullName>88	STOCK ISSUE SELF SERVICE STORE BACKORDER</fullName>
            </value>
            <value>
                <fullName>90	INVENTORY VALUE ADJUSTMENT, INCREASE NORMAL</fullName>
            </value>
            <value>
                <fullName>96	WAREHOUSE DENIALS</fullName>
            </value>
            <value>
                <fullName>97	PSUEDO RECEIPTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>