force-app/main/default/objects/NCSCOrderLineItem__c/fields/Timeframe_Flag__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source table: rod / csc_dtl
Source column: rod_time_frame_flg / csc_dtl_time_frame_flg</description>
    <label>Timeframe Flag</label>
    <type>Checkbox</type>
</CustomField>