force-app/main/default/objects/NCSCOrderLineItem__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Source table: rod
Source column: rod_tracking_nbr</description>
    <label>Tracking Number</label>
    <type>TextArea</type>
</CustomField>