force-app/main/default/objects/NCSCOrderLineItem__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unit code Ex. EA for each.</description>
    <label>Unit Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>