force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact_Date__c</fullName>
    <description>Source table: rod
Source column: rod_ven_con_dte</description>
    <label>Vendor Contact Date</label>
    <type>Date</type>
</CustomField>