force-app/main/default/objects/NCSCOrderLineItem__c/fields/Vendor_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Control_Number__c</fullName>
    <description>Source table: rod
Source column: rod_ctr_nbr</description>
    <label>Vendor Control Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>